fix: z-index set to -1

--- a/frontend/src/components/WaveContainer/styles.scss
+++ b/frontend/src/components/WaveContainer/styles.scss
@@ -4,6 +4,7 @@
     position: absolute;
     left: 0;
     top:0;
+    z-index:-1;
 
     width: 350px;
 
@@ -16,6 +17,7 @@
     position: absolute;
     bottom:0;
     right:0;
+    z-index:-1;
 
     width: 350px;
 
